# ecs-scaling-sqs

./: README.md  cdk.json  package-lock.json  package.json
image/: Dockerfile
image/queue-consumer/: Cargo.toml
image/queue-consumer/src/: main.rs
lib/: ecs-sqs-scaling-stack.ts
test/: ecs-sqs-scaling.test.ts
